# restapi

./: README.md  pyproject.toml  requirements.txt
src/agify/: app.py  client.py  controllers.py  db.py  initial_data.py  persons_table.db
tests/: fixtures.py  test_agify.py  test_client.py
